assets/css/style.scss
@import "./variables";
@import "./mixins";

html {
    @include box-sizing(border-box);
}

*, *:before, *:after {
    @include box-sizing(inherit);
}

body {
    position: relative;
}

::selection {
    background: $primary-orange;
    color: white;
    text-shadow: none;
}

img {
    max-width: 100%;
    height:auto;
}

hr {
    width: 80%;
}

.background {
    background-color: $primary-black;
}

a:hover {
    color: $primary-orange;
    fill: $primary-orange;
    text-decoration: none;
}

.heading > span {
    border-bottom: 3px solid $primary-orange;
    padding-bottom: 6px !important;
    line-height: 50px;
}

.container-fluid h1, h2, h3, h4, h5, h6, p {
    margin-left: 1.8rem;
    margin-right: 1.8rem;
}

#AboutMe, #Experience, #Education, #Skills, #Portfolio {
    min-height: 80vh;
}


/* Navbar */

.active {
    border: 3px $primary-orange solid !important;
}

li.nav-item:hover > a {
    border-bottom: 3px $primary-orange solid;
}

.navbar-nav > li > a {
  border: 3px transparent solid;
}

.navbar-a a{
    color: white !important;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.25rem;
    padding: 0.5rem 3.5rem !important;
}


/* Home */

#home hr {
    border-color: white;
    width: 80%;
}

.hero {
  background-size: cover;
  background-color: $primary-black;
  background-blend-mode: multiply;
  background-attachment: fixed;
  height: 100vh;
  width: 100%;
}

.inner-text {
  font-family: 'Roboto', sans-serif;
  position: relative;
  top: 50%;
  font-size: 50px;
  @include transform(translateY(-50%));
}

@media only screen and (min-width: 320px) {
  .inner-text {
    padding-left: 15px;
    padding-right: 15px;
  }
}

@media only screen and (min-width: 400px) {
  .inner-text {
    padding-left: 40px;
    padding-right: 40px;
  }
}

@media only screen and (min-width: 680px) {
  .inner-text {
    font-size: 75px;
  }
}

@media only screen and (min-width: 950px) {
  .inner-text {
    font-size: 100px;
  }
}

.inner-text > a {
  text-decoration: none;
  @include transition(all 0.3s ease);
}

.name {
  color: white;
  display: block;
  font-size: 6rem;
  font-weight: 900;
  margin: 0;
  line-height: 1;
}

@media only screen and (max-width: 480px) {
  .name {
    font-size: 4rem;
    position: relative;
    top: 0.6rem;
  }
}

.name > span {
  font-weight: 100;
  margin: 0;
  line-height: 1;
  color: $secondary-orange;
}

.job-title {
  display: block;
  font-size: 2.4rem;
  font-weight: 900;
  margin: 0;
  line-height: 2;
  color: $secondary-orange;
}

@media only screen and (max-width: 480px) {
  .job-title {
    font-size: 1.8rem;
    position: relative;
    margin-top: 20px;
    margin-bottom: 10px;
    top: 0.6rem;
  }
}

.job-title > span {
  font-weight: 100;
  margin: 0;
  line-height: 2;
  color: white;
}

@media only screen and (max-width: 480px) {
  .job-title > span {
    margin-top: 20px;
    margin-bottom: 10px;
  }
}

.intro {
  display: block;
  font-family: Oswald, sans-serif;
  font-size: 1.4rem;
  font-weight: 0;
  margin: 0.8rem;
  line-height: 1;
  color: $secondary-orange;
}

@media only screen and (max-width: 480px) {
  .intro {
    font-size: 1.2rem;
    position: relative;
    margin-top: 20px;
    margin-bottom: 10px;
    top: 0.6rem;
  }
}

.hero-down {
  position: absolute;
  margin: 0 -13px;
  top: 90vh;
  font-size: 2em;
  height: 2em;
  color: #f5f5f5;
  border-radius: 100%;
}

.hero-down:hover {
  color: white;
}

.hero-down i {
  vertical-align: bottom;
  position: relative;
  top: 0.1rem;
}

.white {
  color: white;
}

.social-icons-row {
  margin: 0px auto;
  width: 100%;
}

.social-icons-row i {
  border-radius: 3px;
  cursor: pointer;
  font-size: 2.9rem;
  color: white;
  margin: 0px 20px;
  padding: 20px 30px;
  @include transition(all 500ms ease-in-out);
}

@media only screen and (max-width: 550px) {
  .social-icons-row i {
    padding: 10px 10px;
    margin: 20px 10px;
    font-size: 2.5rem;
  }
}

.social-icons-row i:hover {
  background: white;
}

.fa-codepen:hover {
  color: #1e1e26;
}

.fa-github:hover {
  color: #24292d;
}

.fa-linkedin-in:hover {
  color: #007bb5;
}

.codecademy > svg {
  fill: white;
  width: 3.2rem;
  position: relative;
  top: -3px;
}

.codecademy:hover > svg {
  fill: #0e1234;
}

.fa-chevron-up {
  color: white;
}


/* Experience */

#flybmi-logo-hover:hover {
  cursor: help;
}


/* Skills */

.progress, .progress-bar {
    height: 1.75rem;
}

.progress-orange {
    background-color: $primary-orange;
}

#html:hover i {
    color: #dd4b24;
}

#bootstrap:hover i {
  color: #543c78;
}

#css:hover i {
    color: #254bdc;
}

#sass:hover i {
  color: #c66495;
}

#less:hover i {
  color: #1f4471;
}

#grav:hover i {
    color: #211d1e;
    background-color: #f7f7f7;
    border-radius: 10px;
}

#js h4 {
  position: relative;
}

#js i {
  position: relative;
  z-index: 5;
}

.js-square {
  width: 15px;
  height: 13px;
  left: 111px;
  top: 11px;
  z-index: 3;
  position: absolute;
  background-color: transparent;
}

@media screen and (min-width: 768px) and (max-width: 991.5px) {
  .js-square {
    left: 5px;
    top: 40px;
  }
}

#js:hover i {
    color: #e8d44d;
}

#js:hover .js-square {
  background-color: black;
}

#nodejs:hover i {
    color: #6d9c68;
}

#reactjs:hover i {
    color: #00d2f7;
}

#python:hover i {
    background: -webkit-linear-gradient(-60deg, #366a99 50%, #f8ca40 50%);
    -webkit-text-fill-color: transparent;
    @include background-clip(text);
}

#adobe:hover i {
    color: #e71b24;
}

#mailchimp i {
    padding-left: 3px;
}

#mailchimp:hover i {
    background-color: #f7d919;
    border-radius: 4px;
    width: 26px;
}

#seo:hover i {
    color: #38a656;
}

#git:hover i {
    color: #e84d31;
}

#Skills h4 {
    text-decoration: none !important;
    color: black !important;
}

#Skills h4:hover {
    text-decoration: none !important;
    color: black !important;
}

.subskills h4,
.subskills .progress {
  margin-left: 3.5rem;
}


/* Qualifications */

.qualification {
  color: white;
  position: relative;
  overflow: hidden;
  margin: auto;
  width: 250px;
  height: 350px;
  background-color: white;
  color: black;
  text-align: left;
  font-size: 16px;
  border-radius: 15px;
  @include box-shadow(0 0 5px rgba(0, 0, 0, 0.15));
}
.qualification:hover {
  @include box-shadow(0 0 35px rgba(0, 0, 0, 0.2));
}
.qualification * {
  @include transition(all 0.3s ease);
}
.qualification .image {
  max-height: 220px;
  overflow: hidden;
}
.qualification img {
  max-width: 100%;
  vertical-align: top;
  position: relative;
}
.qualification figcaption {
  margin: 0 15px 0;
  padding: 15px;
  position: relative;
  background-color: white;
}
.qualification .date {
  background-color: $secondary-orange;
  top: 15px;
  color: white;
  left: 0;
  min-height: 48px;
  min-width: 48px;
  position: absolute;
  text-align: center;
  font-size: 18px;
  font-weight: 700;
  text-transform: uppercase;
}
.qualification .date span {
  display: block;
  line-height: 24px;
}
.qualification .date .month {
  font-size: 16px;
  background-color: rgba(0, 0, 0, 0.1);
}
.qualification h3,
.qualification p {
  margin: 0;
  padding: 0;
}
.qualification h3 {
  min-height: 50px;
  margin-bottom: 10px;
  margin-left: 45px;
  display: inline-block;
  font-weight: 600;
  font-size: 1rem;
}
.qualification h4 {
    margin-left: 0;
    font-size: 1rem;
}
.qualification p {
  font-size: 0.9em;
  margin-bottom: 20px;
  line-height: 1.6em;
}
.qualification a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  z-index: 1;
}


/* Portfolio */

.portfolio-hover button:hover {
  background-color: $primary-orange;
}

.modal-footer > a > i {
  font-size: 2rem;
  color: black;
}

.modal-footer > a > i:hover {
  color: $primary-orange;
}

figure.portfolio-item {
  color: white;
  position: relative;
  overflow: hidden;
  margin: 0 auto;
  width: 100%;
  background: white;
}

figure.portfolio-item h3 {
  margin-right: 0.8rem;
  margin-left: 0.8rem;
}

figure.portfolio-item img {
  opacity: 1;
  border-radius: 8px;
  position: relative;
  @include transition(opacity 0.35s);
}

figure.portfolio-item .center {
  border-radius: 5px;
  display: block;
  content: '';
  position: absolute;
  background-color: black;
  top: 50%;
  left: 50%;
  height: 70px;
  width: 70px;
  opacity: 0;
  text-align: center;
  @include box-shadow(0 0 10px rgba(0, 0, 0, 0.85));
  @include transform(translate(-50%, -50%) rotate(0deg));
  @include transition(all 0.4s);
}

figure.portfolio-item .center i {
  font-size: 2rem;
  color: white;
  line-height: 70px;
  opacity: 0.3;
}

figure.portfolio-item figcaption {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: left;
}

figure.portfolio-item figcaption > div {
  float: left;
  height: 100%;
  overflow: hidden;
  width: 50%;
  position: relative;
}

figure.portfolio-item figcaption a {
  opacity: 0.7;
}

figure.portfolio-item figcaption a:hover {
  opacity: 1;
}

figure.portfolio-item figcaption h3 {
  background-color: #222;
  font-weight: 800;
  text-transform: uppercase;
  font-size: 0.8rem;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.45s, -webkit-transform 0.45s;
          transition: opacity 0.45s, -webkit-transform 0.45s;
}

figure.portfolio-item figcaption .left h3 {
  border-radius: 5px 0 0 5px;
  top: 50%;
  padding: 4px 35px 4px 10px;
  right: 0;
  @include transform(translate(100%, 0px));
}

figure.portfolio-item figcaption .right h3 {
  border-radius: 0 5px 5px 0;
  bottom: 50%;
  padding: 4px 10px 4px 35px;
  padding-left: 30px;
  @include transform(translate(-100%, 0px));
}

figure.portfolio-item a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
}

figure.portfolio-item .tmd-orange {
  background-color: $tmd-orange;
}

figure.portfolio-item .bmi-blue {
  background-color: $flybmi-blue;
}

figure.portfolio-item .white {
  background-color: white;
  color: #444444;
}

figure.portfolio-item:hover img,
figure.portfolio-item.hover img {
  opacity: 0.5;
}

figure.portfolio-item:hover figcaption .left h3,
figure.portfolio-item.hover figcaption .left h3,
figure.portfolio-item:hover figcaption .right h3,
figure.portfolio-item.hover figcaption .right h3 {
  opacity: 1;
  @include transform(translate(0%, 0px));
}

figure.portfolio-item:hover .center,
figure.portfolio-item.hover .center {
  opacity: 1;
  @include transform(translate(-50%, -50%) rotate(45deg));
}

figure.portfolio-item:hover .center i,
figure.portfolio-item.hover .center i {
  @include transform(translate(0%, -10px));
}


/* Footer */

footer {
    min-height: 6rem;
    max-height: 100%;
}

